feat: 联调，加上gitignore

--- a/app.json
+++ b/app.json
@@ -11,5 +11,23 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "",
     "navigationBarTextStyle":"black"
+  },
+  "tabBar":{
+    "color":"#88aaf9",
+    "selectedColor":"#4682f0",
+    "borderStyle":"white",
+    "backgroundColor":"#f6f6f6",
+    "list":[{
+      "pagePath":"pages/index/index",
+      "iconPath":"images/home-icon.png",
+      "selectedIconPath":"images/home-iconS.png",
+      "text":""
+    },
+    {
+      "pagePath":"pages/tabbar/tabbar",
+      "iconPath":"images/user-icon.png",
+      "selectedIconPath":"images/user-iconS.png",
+      "text":""
+    }]
   }
 }
