--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/product-detail/product-detail",
     "pages/company-detail/company-detail",
@@ -18,28 +18,30 @@
     "pages/catalogue/catalogue",
     "pages/tabbar/tabbar"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
-  "tabBar":{
-    "color":"#88aaf9",
-    "selectedColor":"#4682f0",
-    "borderStyle":"white",
-    "backgroundColor":"#f6f6f6",
-    "list":[{
-      "pagePath":"pages/index/index",
-      "iconPath":"images/home-icon.png",
-      "selectedIconPath":"images/home-iconS.png",
-      "text":""
-    },
-    {
-      "pagePath":"pages/tabbar/tabbar",
-      "iconPath":"images/user-icon.png",
-      "selectedIconPath":"images/user-iconS.png",
-      "text":""
-    }]
+  "tabBar": {
+    "color": "#88aaf9",
+    "selectedColor": "#4682f0",
+    "borderStyle": "white",
+    "backgroundColor": "#f6f6f6",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "images/home-icon.png",
+        "selectedIconPath": "images/home-iconS.png",
+        "text": ""
+      },
+      {
+        "pagePath": "pages/tabbar/tabbar",
+        "iconPath": "images/user-icon.png",
+        "selectedIconPath": "images/user-iconS.png",
+        "text": ""
+      }
+    ]
   }
 }
