--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     "pages/catalogue/catalogue",
     "pages/feedback/feedback",
     "pages/feedback-success/feedback-success",
-    "pages/tabbar/tabbar"
+    "pages/user-home/user-home"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -27,23 +27,22 @@
     "navigationBarTitleText": "",
     "navigationBarTextStyle": "black"
   },
-  "tabBar": {
-    "color": "#88aaf9",
-    "selectedColor": "#4682f0",
-    "borderStyle": "white",
-    "backgroundColor": "#f6f6f6",
-    "list": [
+  "tabBar":{
+    "color":"#88aaf9",
+    "selectedColor":"#4682f0",
+    "borderStyle":"white",
+    "backgroundColor":"#f6f6f6",
+    "list":[{
+      "pagePath":"pages/index/index",
+      "iconPath":"images/home-icon.png",
+      "selectedIconPath":"images/home-iconS.png",
+      "text":""
+    },
       {
-        "pagePath": "pages/index/index",
-        "iconPath": "images/home-icon.png",
-        "selectedIconPath": "images/home-iconS.png",
-        "text": ""
-      },
-      {
-        "pagePath": "pages/tabbar/tabbar",
-        "iconPath": "images/user-icon.png",
-        "selectedIconPath": "images/user-iconS.png",
-        "text": ""
+        "pagePath":"pages/user-home/user-home",
+        "iconPath":"images/user-icon.png",
+        "selectedIconPath":"images/user-iconS.png",
+        "text":""
       }
     ]
   }
