feat(投连账户): 新增页面

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/product-screen/product-screen",
     "pages/disease-insurance/disease-insurance",
     "pages/apply-info/apply-info",
+    "pages/prograde-touzitoulian/prograde-touzitoulian",
     "pages/feedback/feedback",
     "pages/feedback-success/feedback-success",
     "pages/question-class/question-class",
